[package]
name = "scpfoundation-explorer"
version = "0.1.0"
edition = "2021"
authors = ["flexice <litegame150@gmail.com>"]

[dependencies]
serde = { version = "1.0.152", features = ["derive"]}
reqwest = { version = "0.11.13", features = ["blocking"]}
tokio = { version = "1.24.0", features = ["full"]}
crossterm = "0.25.0"
scraper = "0.14.0"
serde_json = "1.0.91"
tui = "0.19.0"
bincode = "1.3.3"
